--- a/Program/Frontend/GUI/MagicSquares.form
+++ b/Program/Frontend/GUI/MagicSquares.form
@@ -15,7 +15,7 @@
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -31,7 +31,7 @@
         <constraints>
           <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -46,7 +46,7 @@
         <constraints>
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -62,7 +62,7 @@
         <constraints>
           <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -78,7 +78,7 @@
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -90,7 +90,7 @@
         <constraints>
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -102,7 +102,7 @@
         <constraints>
           <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -114,7 +114,7 @@
         <constraints>
           <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -126,7 +126,7 @@
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -139,7 +139,7 @@
         <constraints>
           <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -151,7 +151,7 @@
         <constraints>
           <grid row="6" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -163,7 +163,7 @@
         <constraints>
           <grid row="6" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -175,7 +175,7 @@
         <constraints>
           <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -187,7 +187,7 @@
         <constraints>
           <grid row="8" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -199,7 +199,7 @@
         <constraints>
           <grid row="8" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -211,7 +211,7 @@
         <constraints>
           <grid row="8" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="20" height="20"/>
-            <preferred-size width="40" height="40"/>
+            <preferred-size width="30" height="30"/>
             <maximum-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -305,7 +305,9 @@
       </component>
       <component id="46010" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <font name="DejaVu Sans Condensed" size="18"/>
@@ -314,7 +316,9 @@
       </component>
       <component id="7ef80" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <font name="DejaVu Sans Condensed" size="18"/>
@@ -323,7 +327,9 @@
       </component>
       <component id="a9193" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <font name="DejaVu Sans Condensed" size="18"/>
@@ -332,7 +338,9 @@
       </component>
       <component id="c53e" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <font name="DejaVu Sans Condensed" size="18"/>
@@ -341,7 +349,9 @@
       </component>
       <component id="d730a" class="javax.swing.JLabel">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <font name="DejaVu Sans Condensed" size="18"/>
@@ -350,7 +360,9 @@
       </component>
       <component id="9176a" class="javax.swing.JLabel">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <font name="DejaVu Sans Condensed" size="18"/>
@@ -359,7 +371,9 @@
       </component>
       <component id="d4c4d" class="javax.swing.JLabel">
         <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <font name="DejaVu Sans Condensed" size="18"/>
@@ -368,7 +382,9 @@
       </component>
       <component id="330ce" class="javax.swing.JLabel">
         <constraints>
-          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <font name="DejaVu Sans Condensed" size="18"/>
